--- a/Hive.Engine.Tests/Hive.Engine.Tests.fsproj
+++ b/Hive.Engine.Tests/Hive.Engine.Tests.fsproj
@@ -56,6 +56,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Tools.fs" />
     <Compile Include="RulesTest.fs" />
+    <Compile Include="MovementTest.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
