--- a/Hive.IpcBridge/packages.config
+++ b/Hive.IpcBridge/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Julas.Utils" version="2.0.7" targetFramework="net452" />
 </packages>
