--- a/Hive.Tests/Hive.Tests.csproj
+++ b/Hive.Tests/Hive.Tests.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EngineTests.cs" />
+    <Compile Include="IpcTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -75,6 +76,14 @@
     <ProjectReference Include="..\Hive.Common\Hive.Common.csproj">
       <Project>{E8109063-C42B-4877-BE1B-EA6EE3C53616}</Project>
       <Name>Hive.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hive.IpcBridge\Hive.IpcServer.csproj">
+      <Project>{3b3ba155-94b2-4edf-b2c9-c605c856e5b7}</Project>
+      <Name>Hive.IpcServer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hive.IpcClient\Hive.IpcClient.csproj">
+      <Project>{cc069f5d-fe27-496d-8694-3fc122d7631d}</Project>
+      <Name>Hive.IpcClient</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hive\Hive.EngineWrapper.csproj">
       <Project>{2a0389b4-38b9-4816-bb49-04e54c65e050}</Project>
