--- a/Hive.IpcServer/Hive.IpcServer.csproj
+++ b/Hive.IpcServer/Hive.IpcServer.csproj
@@ -67,8 +67,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y $(TargetPath) $(SolutionDir)Graphics
-copy /Y $(TargetDir)Julas.Utils.dll $(SolutionDir)Graphics</PostBuildEvent>
+    <PostBuildEvent>copy /Y $(TargetPath) $(TargetDir)..\..\Graphics
+copy /Y $(TargetDir)Julas.Utils.dll $(TargetDir)..\..\Graphics</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
