--- a/Graphics/.gitignore
+++ b/Graphics/.gitignore
@@ -28,7 +28,7 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
-Graphics/Temp/
+Temp/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
