--- a/Hive.IpcServer/Hive.IpcServer.csproj
+++ b/Hive.IpcServer/Hive.IpcServer.csproj
@@ -42,10 +42,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HiveServer.cs" />
@@ -57,8 +53,8 @@
       <Project>{e8109063-c42b-4877-be1b-ea6ee3c53616}</Project>
       <Name>Hive.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Hive\Hive.EngineWrapper.csproj">
-      <Project>{2a0389b4-38b9-4816-bb49-04e54c65e050}</Project>
+    <ProjectReference Include="..\Hive.EngineWrapper\Hive.EngineWrapper.csproj">
+      <Project>{2A0389B4-38B9-4816-BB49-04E54C65E050}</Project>
       <Name>Hive.EngineWrapper</Name>
     </ProjectReference>
   </ItemGroup>
