Dodaję jeszcze raz

--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,14 @@ build/
 bld/
 [Bb]in/
 [Oo]bj/
+*.exe
+*.dll
 
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
+Graphics/Temp/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -228,3 +231,12 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+
+/[Ll]ibrary/
+/[Tt]emp/
+/[Oo]bj/
+/[Bb]uild/
+/[Bb]uilds/
+/Assets/AssetStoreTools*
+
+!Graphics/
