--- a/Hive.Engine/Hive.Engine.fsproj
+++ b/Hive.Engine/Hive.Engine.fsproj
@@ -77,6 +77,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
   </ItemGroup>
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y $(TargetPath) $(TargetDir)..\..\Graphics</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
