--- a/Hive.IpcClient/Hive.IpcClient.csproj
+++ b/Hive.IpcClient/Hive.IpcClient.csproj
@@ -51,7 +51,8 @@
     <PostBuildEvent>if not exist "$(SolutionDir)\Graphics" mkdir $(SolutionDir)\Graphics
 if not exist "$(SolutionDir)\Graphics\Assets" mkdir $(SolutionDir)\Graphics\Assets
 
-copy /Y $(TargetPath) $(SolutionDir)\Graphics\Assets\$(TargetFileName)</PostBuildEvent>
+copy /Y $(TargetPath) $(SolutionDir)\Graphics\Assets\$(TargetName).dll
+copy /Y $(TargetPath) $(SolutionDir)\Graphics\Assets\$(TargetName).pdb</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
