--- a/Hive.IpcServer/Hive.IpcServer.csproj
+++ b/Hive.IpcServer/Hive.IpcServer.csproj
@@ -66,7 +66,8 @@
     <PostBuildEvent>if not exist "$(SolutionDir)\Graphics" mkdir $(SolutionDir)\Graphics
 if not exist "$(SolutionDir)\Graphics\Assets" mkdir $(SolutionDir)\Graphics\Assets
 
-copy /Y $(TargetPath) $(SolutionDir)\Graphics\$(TargetFileName)
+copy /Y $(TargetPath) $(SolutionDir)\Graphics\$(TargetName).dll
+copy /Y $(TargetPath) $(SolutionDir)\Graphics\$(TargetName).pdb
 copy /Y $(TargetDir)Julas.Utils.dll $(SolutionDir)\Graphics\Julas.Utils.dll</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
