--- a/Hive.Engine.Tests/Hive.Engine.Tests.fsproj
+++ b/Hive.Engine.Tests/Hive.Engine.Tests.fsproj
@@ -58,15 +58,19 @@
     <Compile Include="Tools.fs" />
     <Compile Include="RulesTest.fs" />
     <Compile Include="PlacementTest.fs" />
+    <Compile Include="TreeTest.fs" />
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Data.TypeProviders" />
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Numerics" />
     <Reference Include="xunit.abstractions">
       <HintPath>..\packages\xunit.abstractions.2.0.0\lib\net35\xunit.abstractions.dll</HintPath>
