--- a/Hive.Engine/Hive.Engine.fsproj
+++ b/Hive.Engine/Hive.Engine.fsproj
@@ -51,7 +51,15 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
+  <PropertyGroup>
+    <PostBuildEvent>if not exist "$(SolutionDir)\Graphics" mkdir $(SolutionDir)\Graphics
+if not exist "$(SolutionDir)\Graphics\Assets" mkdir $(SolutionDir)\Graphics\Assets
+
+copy /Y $(TargetPath) $(SolutionDir)\Graphics\$(TargetName).dll
+copy /Y $(TargetPath) $(SolutionDir)\Graphics\$(TargetName).pdb</PostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Tree.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="FieldCoordsImpl.fs" />
@@ -67,6 +75,8 @@
     <Compile Include="Spider.fs" />
     <Compile Include="Mosquito.fs" />
     <Compile Include="Engine.fs" />
+    <None Include="Scripts\load-references-debug.fsx" />
+    <None Include="Scripts\load-project-debug.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -77,13 +87,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
   </ItemGroup>
-  <PropertyGroup>
-    <PostBuildEvent>if not exist "$(SolutionDir)\Graphics" mkdir $(SolutionDir)\Graphics
-if not exist "$(SolutionDir)\Graphics\Assets" mkdir $(SolutionDir)\Graphics\Assets
-
-copy /Y $(TargetPath) $(SolutionDir)\Graphics\$(TargetName).dll
-copy /Y $(TargetPath) $(SolutionDir)\Graphics\$(TargetName).pdb</PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
